[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dependency_scanner"
version = "0.1.0"
description = "Mission dependency scanner for Arma 3"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "dependency_scanner", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.0"
mission-scanner = { path = "../mission_scanner" }
asset-scanner = { path = "../asset_scanner" }
class-scanner = { path = "../class_scanner" }

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pylint = "^3.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
dependency-scanner = "dependency_scanner.scan:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
